# Computer-Vision

./: README.md
Assignment 1/: CMakeLists.txt  SImage.h  a1.cpp  a1_utils.h  detected1.txt  detected4.txt  detected7.txt  detected_5.txt  detected__music1_7.txt  detected__music2_7.txt  detected_music1_4.txt  detected_music2_4.txt  detected_music3_4.txt  detected_music3_7.txt  detected_music4_4.txt  detected_music4_7.txt  omr
Assignment 2/: a2.cpp
Assignment 3/: CNN.h  Makefile  SVM.h  SVM_2.h  a2_3  a2_3.cpp  a3  a3.cpp  centers_100.yml  centers_40.yml  pca_2_cv.py  svm_har.h  svm_model_3
Assignment 4/: Makefile  render.cpp  segment.cpp  stereo.cpp
